# swim-rs

./: Cargo.toml  README.md  swim.toml
src/: cli.rs  codec.rs  fdetector.rs  main.rs
