[package]
name = "swim-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
machineid-rs = "1.2.2"
protocol = { version = "3.4.0", features=["derive"] }
rand = "0.8.5"
tokio = {version = "1.24.2", features=["full"] }
