[package]
name = "swim-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
machineid-rs = "1.2.2"
protocol = { version = "3.4.0", features=["derive"] }
rand = "0.8.5"
serde = {version="1.0.152", features=["derive"]}
tokio = {version = "1.24.2", features=["full"] }
toml = "0.7.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
